--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "polymer": "Polymer/polymer#^2.0.0",
     "iron-ajax": "PolymerElements/iron-ajax#2.1.3",
     "paper-button": "PolymerElements/paper-button#2.1.3",
-    "paper-input": "PolymerElements/paper-input#2.2.3"
+    "paper-input": "PolymerElements/paper-input#2.2.3",
+    "iron-icons": "PolymerElements/iron-icons#2.1.1"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
